# celestob

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
.github/workflows/: release.yaml
src-backend/: config.rs  error.rs  main.rs  middleware.rs  task.rs  utils.rs
src-backend/api/: heartbeat.rs  mod.rs  status.rs
src-backend/model/: heartbeat.rs  status.rs
src-frontend/: App.vue  main.ts
src-frontend/components/: Available.vue  Error.vue  Status.vue  Tooltip.vue
