[package]
name = "celestob"
version = "0.1.3"
edition = "2021"

[[bin]]
name = "celestob"
path = "src-backend/main.rs"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true

[dependencies]
anyhow = "1.0.95"
axum = "0.8.1"
axum-response-cache = "0.2.0"
bollard = "0.18.1"
chrono = "0.4.39"
itertools = "0.14.0"
mimalloc = "0.1.43"
sea-orm = { version = "1.1.4", features = ["sqlx-all", "runtime-tokio-rustls"] }
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread", "signal"] }
toml = "0.8.19"
tower-http = { version = "0.6.2", features = [
  "compression-br",
  "compression-deflate",
  "compression-gzip",
  "compression-zstd",
  "fs",
  "trace",
] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.12.1", features = ["v4"] }
